# qwen3-tts-mlx

./: .env.example  .gitignore  README.md  app.py  compose.yaml  pyproject.toml  server.py  tts.py
.github/workflows/: docker-mcp.yml
mcp/: Dockerfile  pyproject.toml
mcp/src/: audio_view.html  server.py  tts_client.py
