[project]
name = "qwen3-tts"
version = "0.1.0"
description = "Gradio web app and REST API for Qwen3-TTS text-to-speech on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "gradio>=5.0.0",
    "huggingface-hub>=1.3.0",
    "librosa>=0.11.0",
    "mlx>=0.30.0",
    "mlx-audio @ git+https://github.com/Blaizzy/mlx-audio.git@v0.4.5",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "soundfile>=0.13.0",
    "uvicorn>=0.30.0",
]
