[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen3-tts-mcp"
version = "0.1.0"
description = "MCP server for Qwen3-TTS — proxies to the FastAPI TTS backend"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
qwen3-tts-mcp = "src.server:main"
